Movie clip is deformed by resolution multiplier when offset is added in sequence editor #46429

Closed
opened 2015-10-09 18:22:35 +02:00 by Bas Wijnen · 9 comments

System Information
Debian GNU/Linux
Advanced Micro Devices, Inc. [AMD/ATI] RV370 [Radeon X600/X600 SE]
Also seen on another Debian machine, unknown graphics card.

Blender Version
Broken: 2.76rc3
Worked: Don't know, maybe never.

Short description of error
When adding an image Offset to a movie clip strip in the Video Sequence editor while the resolution multiplier in the Render settings is not 100%, the movie clip does not scale with the video and therefore gets displaced, and remains too big.
AFAIK the Render multiplier is intended for fast previews, to be set at 100% for the final render. If the output changes (other than in size) by this setting, it becomes effectively useless.

Exact steps for others to reproduce the error

  1. Click "Image Offset". Even though the numbers are (0,0), the clip changes from auto-fit to normal size. This is strange, but may be intentional.
  2. Decrease Resolution multiplier in Render Settings. The size of the clip does not change, meaning the result is not a scaled version of the output at 100%.
  3. Add an offset and change the multiplier again. The clip moves off screen.

Blender file: sequencer-clip-bug.blend

**System Information** Debian GNU/Linux Advanced Micro Devices, Inc. [AMD/ATI] RV370 [Radeon X600/X600 SE] Also seen on another Debian machine, unknown graphics card. **Blender Version** Broken: 2.76rc3 Worked: Don't know, maybe never. **Short description of error** When adding an image Offset to a movie clip strip in the Video Sequence editor while the resolution multiplier in the Render settings is not 100%, the movie clip does not scale with the video and therefore gets displaced, and remains too big. AFAIK the Render multiplier is intended for fast previews, to be set at 100% for the final render. If the output changes (other than in size) by this setting, it becomes effectively useless. **Exact steps for others to reproduce the error** 1. Click "Image Offset". Even though the numbers are (0,0), the clip changes from auto-fit to normal size. This is strange, but may be intentional. 2. Decrease Resolution multiplier in Render Settings. The size of the clip does not change, meaning the result is not a scaled version of the output at 100%. 3. Add an offset and change the multiplier again. The clip moves off screen. Blender file: [sequencer-clip-bug.blend](https://archive.blender.org/developer/F243770/sequencer-clip-bug.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @wijnen

Added subscriber: @wijnen

Added subscriber: @Sergey

Added subscriber: @Sergey

Changed status from 'Open' to: 'Archived'

Changed status from 'Open' to: 'Archived'
Sergey Sharybin self-assigned this 2015-10-10 08:21:42 +02:00

It's actually how sequencer worked for ages. Any strip with Image Offset enabled is no longer scaled to fit into the full sequencer frame.

it's quite confusing, but solving this is not possible without breaking almost any sequencer setup in the world now. Could happen with some major sequencer recode tho.

So thanks for the report, but closing as know behavior and a TODO.

It's actually how sequencer worked for ages. Any strip with Image Offset enabled is no longer scaled to fit into the full sequencer frame. it's quite confusing, but solving this is not possible without breaking almost any sequencer setup in the world now. Could happen with some major sequencer recode tho. So thanks for the report, but closing as know behavior and a TODO.
Author

Changed status from 'Archived' to: 'Open'

Changed status from 'Archived' to: 'Open'
Author

That was only step one. As I wrote: "This is strange, but may be intentional." Step 2 illustrates behavior that is objectively wrong; when rendering at 50% size, the result is not a scaled version of the render at 100% size. Step 3 illustrates the same thing is a slightly different way.

That was only step one. As I wrote: "This is strange, but may be intentional." Step 2 illustrates behavior that is objectively wrong; when rendering at 50% size, the result is not a scaled version of the render at 100% size. Step 3 illustrates the same thing is a slightly different way.
Sergey Sharybin removed their assignment 2015-10-11 08:56:17 +02:00
Bastien Montagne self-assigned this 2015-10-17 11:31:43 +02:00

This issue was referenced by 0a2b48e3c6

This issue was referenced by 0a2b48e3c68c2dfc5dbc31a843aa772e9fade17c

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#46429
No description provided.