Fix T46429: Movie clip is deformed by resolution multiplier when offset is added in sequence editor.